--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.396.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^2.3.0",
