--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "homepage": "https://rajveer0407.github.io/Movie-Website",
   "name": "moviehub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "deploy": "gh-pages -d dist",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
